# upstream

./: Cargo.toml  Dockerfile  config.yaml  container-config.yaml  cspell.json  docker-compose.yaml
.dev/: dev.sh
src/: args.rs  config.rs  dns_resolver.rs  host.rs  lib.rs  load_balancer.rs  main.rs  upstream.rs  watcher.rs
src/dns_resolver/: global_hickory_dns_resolver.rs  hickory_dns_resolver.rs  tokio_dns_resolver.rs
src/host/: tcp.rs
src/host/tcp/: tcp_stream.rs
src/load_balancer/: fifo_load_balancer.rs  identity_load_balancer.rs  static_fifo_load_balancer.rs
src/loader/: mod.rs  tls_client_config_loader.rs  tls_server_config_loader.rs
src/loader/tls_client_config_loader/: file_tls_client_config_loader.rs
src/loader/tls_server_config_loader/: file_tls_server_config_loader.rs
src/provider/: mod.rs  tls_client_config_provider.rs  tls_server_config_provider.rs
src/provider/tls_client_config_provider/: static_file_tls_client_config_provider.rs  watch_file_tls_client_config_provider.rs  webpki_tls_client_config_provider.rs
src/provider/tls_server_config_provider/: static_file_tls_server_config_provider.rs  watch_file_tls_server_config_provider.rs
src/upstream/: address.rs  connected.rs  tcp.rs
src/upstream/tcp/: tcp_stream.rs
